# Hotel-Tourist

./: README.md  pyproject.toml
sitehotel/sitehotel/: settings.py  urls.py
sitehotel/touristapp/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
sitehotel/touristapp/migrations/: 0001_initial.py  0002_alter_category_options_alter_user_options.py  0002_category_apartaments_cat.py  0003_alter_apartaments_options_alter_category_options_and_more.py
sitehotel/touristapp/static/touristapp/css/: style.css
sitehotel/touristapp/templates/touristapp/: about.html  base.html  contact.html  index.html  login.html  post.html  register.html
sitehotel/touristapp/templatetags/: touristapp_tags.py
